# obp-dagster

./: .env.example  .gitignore  ASSETS_SUMMARY.md  Dockerfile  MIGRATION_NOTES.md  Makefile  PIPELINE_DESCRIPTION.md  allfiles.txt  dagster.yaml  docker-compose.yaml  gh_test.sh  pyproject.toml
burningdemand/collectors/: github.py
data/: burningdemand.duckdb
data_bk/: rate_limiter_hn.db-shm  rate_limiter_hn.db-wal  rate_limiter_rd.db-shm  rate_limiter_rd.db-wal  rate_limiter_so.db-shm  rate_limiter_so.db-wal
docs/llm/gpt-5/: response.json
src/burningdemand/: collectors.yaml  config.py  definitions.py  partitions.py
src/burningdemand/assets/: __init__.py  bronze.py  classification.py  clusters.py  embeddings.py  github.py  gold.py  groups.py  hackernews.py  issues.py  live_evidence.py  live_issues.py  pain_classifier.py  raw_gh_discussions.py  raw_gh_issues.py  raw_gh_pr_reviews.py  raw_gh_pull_requests.py  raw_gh_repositories.py  raw_hn.py  raw_items.py  raw_rd.py  raw_so.py  silver.py
src/burningdemand/config/: __init__.py  __unused__prompts.yaml  config.yaml  keywords.yaml  prompts.yaml
src/burningdemand/defs/: __init__.py  common.py  pb.py  utils.py
src/burningdemand/model/: duckdb.sql
src/burningdemand/resources/: __init__.py  app_config_resource.py  duckdb_resource.py  embedding_resource.py  external_apis_resource.py  github_resource.py  groq_resource.py  hackernews_resource.py  http_clients_resource.py  llm_resource.py  pocketbase.py  pocketbase_resource.py  reddit_resource.py  redis_resource.py  stackoverflow_resource.py
src/burningdemand/schema/: duckdb.sql  raw_items.py
src/burningdemand/utils/: batch_requests.py  categories.py  cluster_representatives.py  collectors.py  config.py  date_ranges.py  http.py  issues_utils.py  llm_schema.py  prompts.py  rate_limiter.py  raw_utils.py  request.py  requests.py  retries.py  text.py  (+2 more)
(+71 files in other folders)
