[project]
dependencies = [
    "dagster==1.12.11",
    "dagster-webserver",
    "requests",
    "anthropic",
    "pandas",
    "numpy",
    "duckdb",
    "pydantic",
    "sentence-transformers",
]
name = "obp-dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"

[dependency-groups]
dev = ["dagster-dg-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burningdemand"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "obp-dagster.burningdemand"
registry_modules = ["obp_dagster.burningdemand.*"]


[tool.black]
line-length = 88                  # Black default (PEP 8 says 79, but 88 is widely accepted)
target-version = ["py39"]
skip-string-normalization = false
