[project]
dependencies = [
    "dagster==1.12.11",
    "dagster-webserver",
    "requests",
    "litellm",
    "pandas",
    "numpy",
    "duckdb",
    "filelock",
    "pydantic",
    "sentence-transformers",
    "pyyaml",
    "python-dotenv",
    "aiolimiter",
    "tenacity",
    "scikit-learn",
    "hdbscan",
    "pyrate-limiter",
    "litellm[proxy]",
    "githubkit",
]
name = "obp-dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"

[dependency-groups]
dev = ["dagster-dg-cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/burningdemand"]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.black]
line-length = 88
target-version = ["py39"]
skip-string-normalization = false

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "burningdemand"
registry_modules = ["burningdemand.*"]
